Adding bootstrap project and es6, babel and friends

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 target
 out
 bin
+build
+bootstrap/bin/*
+bootstrap/local.properties
+bootstrap/project.properties
+bootstrap/.classpath
+bootstrap/target/
+node_modules
+*.log
