--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,11 @@
 .idea
 target
 out
-bin/*
-!bin/AppiumBootstrap.jar
+bin
+bootstrap/bin/*
+bootstrap/local.properties
+bootstrap/project.properties
+bootstrap/.classpath
+bootstrap/target/
+node_modules
+*.log
