--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lodash": "^3.10.0",
     "mobile-json-wire-protocol": "^0.12.3",
     "net": "^1.0.2",
-    "source-map-support": "^0.3.1"
+    "source-map-support": "^0.3.1",
+    "teen_process": "^1.2.2"
   },
   "scripts": {
     "prepublish": "./node_modules/.bin/gulp prepublish",
@@ -39,7 +40,7 @@
     "watch": "./node_modules/.bin/gulp"
   },
   "devDependencies": {
-    "appium-gulp-plugins": "^1.2.12",
+    "appium-gulp-plugins": "^1.3.0",
     "appium-test-support": "0.0.5",
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
