--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "appium-android-bootstrap",
-  "description": "Description goes here.",
+  "description": "Node interface to Appium Android Bootstrap, the java project which appium uses to interact with UiAutomator",
   "keywords": [
-    "appium"
+    "appium",
+    "android",
+    "bootstrap"
   ],
   "version": "2.1.6",
   "author": "appium",
@@ -23,16 +25,16 @@
     "lib": "lib"
   },
   "dependencies": {
-    "appium-adb": "2.0.0-beta13",
+    "appium-adb": "^2.0.1",
     "appium-logger": "^1.1.7",
-    "appium-uiautomator": "0.0.5-beta",
-    "babel-runtime": "=5.5.5",
-    "bluebird": "^2.9.34",
+    "appium-uiautomator": "^1.0.0",
+    "babel-runtime": "=5.8.24",
+    "bluebird": "^2.10.2",
     "lodash": "^3.10.0",
-    "mobile-json-wire-protocol": "^0.12.3",
+    "mobile-json-wire-protocol": "^0.12.6",
     "net": "^1.0.2",
-    "source-map-support": "^0.3.1",
-    "teen_process": "^1.2.2"
+    "source-map-support": "^0.3.2",
+    "teen_process": "^1.3.1"
   },
   "scripts": {
     "prepublish": "./node_modules/.bin/gulp prepublish",
@@ -40,13 +42,11 @@
     "watch": "./node_modules/.bin/gulp"
   },
   "devDependencies": {
-    "appium-gulp-plugins": "^1.3.0",
-    "appium-test-support": "0.0.5",
-    "chai": "^3.0.0",
+    "appium-gulp-plugins": "^1.3.11",
+    "appium-test-support": "^0.0.5",
+    "chai": "^3.3.0",
     "chai-as-promised": "^5.1.0",
-    "gulp": "^3.8.11",
-    "mochawait": "^2.0.0",
-    "sinon": "^1.15.4",
-    "yargs": "^3.10.0"
+    "gulp": "^3.9.0",
+    "sinon": "^1.17.1"
   }
 }
