--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "appium-test-support": "^0.0.5",
     "chai": "^3.3.0",
     "chai-as-promised": "^5.1.0",
-    "gulp": "^3.9.0",
-    "sinon": "^1.17.1"
+    "gulp": "^3.9.0"
   }
 }
