--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "lib": "lib"
   },
   "dependencies": {
+    "appium-base-driver": "^2.0.1",
     "appium-logger": "^2.1.0",
     "appium-uiautomator": "^1.1.0",
     "babel-runtime": "=5.8.24",
     "bluebird": "^2.10.2",
     "lodash": "^3.10.0",
-    "mobile-json-wire-protocol": "^1.2.0",
     "net": "^1.0.2",
     "source-map-support": "^0.3.2",
     "teen_process": "^1.3.1"
