--- a/package.json
+++ b/package.json
@@ -36,16 +36,33 @@
     "teen_process": "^1.3.1"
   },
   "scripts": {
-    "prepublish": "./node_modules/.bin/gulp prepublish",
-    "test": "./node_modules/.bin/gulp once",
-    "watch": "./node_modules/.bin/gulp"
+    "prepublish": "gulp prepublish",
+    "clean": "rm -rf node_modules && npm install",
+    "test": "gulp once",
+    "watch": "gulp watch",
+    "mocha": "mocha",
+    "e2e-test": "gulp e2e-test",
+    "coverage": "gulp coveralls",
+    "build": "gulp transpile",
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
+    "lint": "gulp eslint",
+    "lint:fix": "gulp eslint --fix"
   },
   "devDependencies": {
     "appium-adb": "^2.3.0",
-    "appium-gulp-plugins": "^1.3.12",
-    "appium-test-support": "^0.0.5",
+    "appium-gulp-plugins": "^2.2.0",
+    "appium-test-support": "^0.4.0",
+    "babel-eslint": "^7.1.1",
     "chai": "^3.3.0",
     "chai-as-promised": "^5.1.0",
-    "gulp": "^3.9.0"
+    "eslint": "^3.10.2",
+    "eslint-config-appium": "^2.1.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-promise": "^3.3.1",
+    "gulp": "^3.9.0",
+    "mocha": "^3.5.0",
+    "pre-commit": "^1.1.3"
   }
 }
