--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,6 @@ install:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 script:
-  - DEVICE=android mocha -t 900000 -R spec build/test/$TEST
+  - DEVICE=android mocha -t 900000 -R spec build/test/$TEST --exit
 after_success:
   - gulp coveralls
