--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "appium-base-driver": "^2.21.2",
     "appium-support": "^2.5.0",
     "appium-uiautomator": "^1.1.0",
-    "babel-runtime": "6.26.0",
+    "babel-runtime": "=5.8.24",
     "bluebird": "^3.5.1",
     "lodash": "^4.17.5",
     "net": "^1.0.2",
@@ -53,17 +53,30 @@
     "appium-adb": "^6.2.2",
     "appium-gulp-plugins": "^2.2.0",
     "appium-test-support": "^1.0.0",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^7.1.1",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^4.19.1",
+    "eslint": "^3.10.2",
     "eslint-config-appium": "^2.1.0",
-    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-mocha": "^5.0.0",
+    "eslint-plugin-mocha": "^4.7.0",
     "eslint-plugin-promise": "^3.3.1",
     "gulp": "^3.9.0",
     "mocha": "^5.0.1",
     "pre-commit": "^1.1.3"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "babel-eslint",
+      "babel-preset-env",
+      "eslint",
+      "eslint-plugin-babel",
+      "eslint-plugin-import",
+      "eslint-plugin-mocha",
+      "eslint-plugin-promise",
+      "gulp",
+      "babel-runtime"
+    ]
   }
 }
